# knxvault

./: .dockerignore  .gitignore  .golangci.yml  .gosec.json  .trivyignore  AGENTS.md  Dockerfile  Dockerfile.distroless  Dockerfile.operator  Makefile  NOTICE  README.md  REUSE.toml  SPONSORS.md  docker-compose.test.yml  go.mod  go.sum
.github/workflows/: ci.yml
.semgrep/: knxvault.yml
api/: embed.go  embed_test.go  openapi.yaml
clients/: .openapi-sha256  README.md
clients/java/: README.md  pom.xml
clients/python/: README.md  pyproject.toml
clients/rust/: .generated  Cargo.toml  README.md
clients/rust/examples/: health_smoke.rs
clients/rust/src/: lib.rs
clients/typescript/: README.md  package.json  tsconfig.json
cmd/knxvault/: main.go  main_test.go
cmd/knxvault-cli/: main.go
cmd/knxvault-csi/: main.go
cmd/knxvault-eso/: main.go
cmd/knxvault-webhook/: main.go  main_test.go
cmd/operator/: main.go
config/: knxvault.example.yaml  knxvault.production.yaml  licenses.allow
deployments/cert-manager/: certificate-example.yaml  (+1 more)
docs/: LICENSE  README.md  backlog.md  licensing.md  lld.md  metrics.md
migrations/: 001_init.sql  002_revocation.sql  003_phase2.sql  004_cert_renewal.sql  004_database_role_execution.sql  embed.go
scripts/: audit-sensitive.sh  backup.sh  check-client-drift.sh  check-dtp-surface.sh  check-kv-get-docs.sh  check-licenses.sh  dr-failover.sh  ensure-license-headers.sh  generate-clients.sh  lab-full-e2e.sh  lab-operator-e2e.sh  package-cli-release.sh  restore.sh  test-clients.sh  test-csi-kind.sh  test-operator-kind.sh
(+835 files in other folders)
