[package]
name = "knxvault-client"
version = "0.4.5"
edition = "2021"
description = "KNXVault Rust HTTP client (W40-07)"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }